Version 0.9.31dev (???)
  - Don't allow user to change password if using http authorization.
  - Added back selectDate javascript function that was mistakenly
    removed from edit_entry.php.
Version 0.9.30 (08 Jun 01)
  - Generate a fatal error when MySQL returns an error instead of
    ignoring it.
  - Fixed bug 420352: when viewing a repeating event for a date other
    than its first date, it was always showing the first date.
  - Fixed bug 430290: non-admin users could not update their name
    or password.
  - Fixed bug 430347: displaying duplicates when using ODBC.
  - Fixed bug: Was not displaying the correct user name in month, week
    and year view when viewing another user's calendar.
  - Fixed bug: send_reminders.php was dying because of SQL error
    on Postgres.
  - Fixed bug: conflict checking was not working properly for repeating
    events when future dates were in a different daylight savings mode.
Version 0.9.29 (05 Jun 01)
  - Fixed bug: When editing an event, the event date is set to the
    current date rather than the event's date.
  - Fixed bug: Adding missing argument to user_load_variables() in
    login.php that was preventing some people from being able to login.
Version 0.9.28 (01 Jun 01)
  - Moved all the references to the webcal_user table to be in the
    new includes/user.inc file.  This BREAKS the NIS user authentication,
    but it should make adding LDAP (or any other user table) support
    much simpler.
  - Added preference settings for receiving email.  Users can now
    decide whether they want to receive email for event reminders,
    new events, updated events, deleted events, and rejected events.
  - Fixed bug 429264: The $is_admin variable was not being set properly,
    so no users were able to access admin functions.
  - Fixed bug: Was displaying unapproved events when user set preferences
    to not display them (in day, week and month views).
  - Fixed bug 231236: event popup info was not displaying on the list