@@ -1,4 +1,6 @@
 Version 0.9.31dev (???)
+  - Fixed bug 215549: if calendar is read-only, don't show new image,
+    and don't allow users to add events.
   - Don't allow user to change password if using http authorization.
   - Added back selectDate javascript function that was mistakenly
     removed from edit_entry.php.
